@@ -1,5 +1,8 @@
 2010-04-30  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclCompCmds.c (TclCompileVariableCmd): Slightly tighter
+	issuing of instructions.
+
 	* generic/tclExecute.c (TclExecuteByteCode): Add peephole optimization
 	of the fact that INST_DICT_FIRST and INST_DICT_NEXT always have a
 	conditional jump afterwards.
